Be more resilient when we get a 502 HTTP response.